add search for packages

--- a/packages/4.html
+++ b/packages/4.html
@@ -202,9 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Page:<span><b> 4</b> of </span><b>50</b>
                     </p>
-                </div>
 
-
+<div class="container shadow">
+<h3>Online Package Viewer</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Package Name..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 <div class="container-fluid">
     <div class="table-responsive tabela-okvir-1 nunito-dark">
@@ -225,350 +231,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/d/desktop-base/desktop-base/">desktop-base</a></td>
               <td>2025.01.03</td>
               <td>common files for the OpenBosniana Desktop</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/desktop-file-utils/desktop-file-utils/">desktop-file-utils</a></td>
               <td>0.26-1</td>
               <td>Utilities for .desktop files</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/dictionaries-common/dictionaries-common/">dictionaries-common</a></td>
               <td>1.29.5</td>
               <td>spelling dictionaries - common utilities</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/diffstat/diffstat/">diffstat</a></td>
               <td>1.65-1</td>
               <td>produces graph of changes introduced by a diff file</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/diffutils/diffutils/">diffutils</a></td>
               <td>1:3.8-4</td>
               <td>File comparison utilities</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gnupg2/dirmngr/">dirmngr</a></td>
               <td>2.2.40-1.1</td>
               <td>GNU privacy guard - network certificate management service</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/distro-info-data/distro-info-data/">distro-info-data</a></td>
               <td>0.58+deb12u4</td>
               <td>information about the distributions' releases (data files)</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/dkms/dkms/">dkms</a></td>
               <td>3.0.10-8+deb12u1</td>
               <td>Dynamic Kernel Module System (DKMS)</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lvm2/dmeventd/">dmeventd</a></td>
               <td>2:1.02.185-2</td>
               <td>Linux Kernel Device Mapper event daemon</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dmidecode/dmidecode/">dmidecode</a></td>
               <td>3.4-1</td>
               <td>SMBIOS/DMI table decoder</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lvm2/dmsetup/">dmsetup</a></td>
               <td>2:1.02.185-2</td>
               <td>Linux Kernel Device Mapper userspace library</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/dns-root-data/dns-root-data/">dns-root-data</a></td>
               <td>2024071801~deb12u1</td>
               <td>DNS root hints and DNSSEC trust anchor</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dnsmasq/dnsmasq-base/">dnsmasq-base</a></td>
               <td>2.90-4~deb12u1</td>
               <td>Small caching DNS proxy and DHCP/TFTP server - executable</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/b/bind9/dnsutils/">dnsutils</a></td>
               <td>1:9.18.33-1~deb12u2</td>
               <td>Transitional package for bind9-dnsutils</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/doc-debian/doc-debian/">doc-debian</a></td>
               <td>11.3+nmu1</td>
               <td>Debian Project documentation and other documents</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/docbook-xml/docbook-xml/">docbook-xml</a></td>
               <td>4.5-12</td>
               <td>standard XML documentation system for software and systems</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/docbook-xsl/docbook-xsl/">docbook-xsl</a></td>
               <td>1.79.2+dfsg-2</td>
               <td>stylesheets for processing DocBook XML to various output formats</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/docker-compose/docker-compose/">docker-compose</a></td>
               <td>1.29.2-3</td>
               <td>define and run multi-container Docker applications with YAML</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dolphin/dolphin/">dolphin</a></td>
               <td>4:22.12.3-1</td>
               <td>file manager</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dosfstools/dosfstools/">dosfstools</a></td>
               <td>4.2-1</td>
               <td>utilities for making and checking MS-DOS FAT filesystems</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/dpkg/dpkg/">dpkg</a></td>
               <td>1.22.0+openbosniana</td>
               <td>Debian package management system</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/d/dpkg/dpkg-dev/">dpkg-dev</a></td>
               <td>1.21.22</td>
               <td>Debian package development tools</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/d/drkonqi/drkonqi/">drkonqi</a></td>
               <td>5.27.5-2</td>
               <td>Crash handler for Qt applications</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/e/e2fsprogs/e2fsprogs/">e2fsprogs</a></td>
               <td>1.47.2~rc1-2~bpo12+2</td>
               <td>ext2/ext3/ext4 file system utilities</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libe/libeatmydata/eatmydata/">eatmydata</a></td>
               <td>130-2</td>
               <td>Library and utilities designed to disable fsync and friends</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/eject/">eject</a></td>
               <td>2.38.1-5+deb12u3</td>
               <td>ejects CDs and operates CD-Changers under Linux</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/e/elisa-player/elisa/">elisa</a></td>
               <td>22.12.3-1</td>
               <td>Simple music player with a focus on Plasma desktop integration and privacy</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/e/emacsen-common/emacsen-common/">emacsen-common</a></td>
               <td>3.0.5</td>
               <td>Common facilities for all emacsen</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/e/eslint/eslint/">eslint</a></td>
               <td>6.4.0~dfsg+~6.1.9-7</td>
               <td>AST-based pattern checker for JavaScript</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/e/ethtool/ethtool/">ethtool</a></td>
               <td>1:6.1-1</td>
               <td>display or change Ethernet device settings</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/fuse-exfat/exfat-fuse/">exfat-fuse</a></td>
               <td>1.3.0+git20220115-2</td>
               <td>read and write exFAT driver for FUSE</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/e/exfatprogs/exfatprogs/">exfatprogs</a></td>
               <td>1.2.0-1+deb12u1</td>
               <td>exFAT file system utilities</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/e/exim4/exim4-base/">exim4-base</a></td>
               <td>4.98.1-2~bpo12+1</td>
               <td>support files for all Exim MTA (v4) packages</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/e/exim4/exim4-config/">exim4-config</a></td>
               <td>4.98.1-2~bpo12+1</td>
               <td>configuration for the Exim MTA (v4)</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/e/exim4/exim4-daemon-light/">exim4-daemon-light</a></td>
               <td>4.98.1-2~bpo12+1</td>
               <td>lightweight Exim MTA (v4) daemon</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/e/extra-xdg-menus/extra-xdg-menus/">extra-xdg-menus</a></td>
               <td>1.0-8</td>
               <td>Empty package</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/fakeroot/fakeroot/">fakeroot</a></td>
               <td>1.31-1.2</td>
               <td>tool for simulating superuser privileges</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/fdisk/">fdisk</a></td>
               <td>2.38.1-5+deb12u3</td>
               <td>collection of partitioning utilities</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/ffmpeg/ffmpeg/">ffmpeg</a></td>
               <td>7:5.1.6-0+deb12u1</td>
               <td>Tools for transcoding, streaming and playing of multimedia files</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/ffmpegthumbs/ffmpegthumbs/">ffmpegthumbs</a></td>
               <td>4:22.12.3-1</td>
               <td>video thumbnail generator using ffmpeg</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/file/file/">file</a></td>
               <td>1:5.44-3</td>
               <td>Recognize the type of data in a file using "magic" numbers</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/findutils/findutils/">findutils</a></td>
               <td>4.9.0-4</td>
               <td>utilities for finding files--find, xargs</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/firefox-esr/firefox-esr/">firefox-esr</a></td>
               <td>128.10.0esr-1~deb12u1</td>
               <td>Mozilla Firefox web browser - Extended Support Release (ESR)</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/firmware-free/firmware-linux-free/">firmware-linux-free</a></td>
               <td>20200122-1</td>
               <td>Binary firmware for various drivers in the Linux kernel</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/flatpak/flatpak/">flatpak</a></td>
               <td>1.14.10-1~deb12u1</td>
               <td>Application deployment framework for desktop apps</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/flatpak-xdg-utils/flatpak-xdg-utils/">flatpak-xdg-utils</a></td>
               <td>1.0.5-3</td>
               <td>xdg-open and xdg-email reimplementation for containerized apps</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/fontconfig/fontconfig/">fontconfig</a></td>
               <td>2.14.1-4</td>
               <td>generic font configuration library - support binaries</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/fontconfig/fontconfig-config/">fontconfig-config</a></td>
               <td>2.14.1-4</td>
               <td>generic font configuration library - configuration</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-cantarell/fonts-cantarell/">fonts-cantarell</a></td>
               <td>0.303.1-1</td>
               <td>sans serif font family designed for on-screen readability</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/f/fonts-dejavu/fonts-dejavu-core/">fonts-dejavu-core</a></td>
               <td>2.37-6</td>
               <td>Vera font family derivate with additional characters</td>
-              <td>2025-05-25 02:11:19</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
 
         </tbody>
@@ -763,7 +769,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
