--- a/packages/50.html
+++ b/packages/50.html
@@ -202,9 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Page:<span><b> 50</b> of </span><b>50</b>
                     </p>
-                </div>
 
-
+<div class="container shadow">
+<h3>Online Package Viewer</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Package Name..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 <div class="container-fluid">
     <div class="table-responsive tabela-okvir-1 nunito-dark">
@@ -225,315 +231,315 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/x/xml-core/xml-core/">xml-core</a></td>
               <td>0.18+nmu1</td>
               <td>XML infrastructure and XML catalog file support</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xorg/xorg/">xorg</a></td>
               <td>1:7.7+23</td>
               <td>X.Org X Window System</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/x/xorg-docs/xorg-docs-core/">xorg-docs-core</a></td>
               <td>1:1.7.1-1.2</td>
               <td>Core documentation for the X.org X Window System</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/x/xorg-sgml-doctools/xorg-sgml-doctools/">xorg-sgml-doctools</a></td>
               <td>1:1.11-1.1</td>
               <td>Common tools for building X.Org SGML documentation</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libi/libisoburn/xorriso/">xorriso</a></td>
               <td>1.5.4-4</td>
               <td>command line ISO-9660 and Rock Ridge manipulation tool</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/x/xorg-server/xserver-common/">xserver-common</a></td>
               <td>2:21.1.7-3+deb12u9</td>
               <td>common files used by various X servers</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xorg/xserver-xorg/">xserver-xorg</a></td>
               <td>1:7.7+23</td>
               <td>X.Org X server</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xorg-server/xserver-xorg-core/">xserver-xorg-core</a></td>
               <td>2:21.1.7-3+deb12u9</td>
               <td>Xorg X server - core server</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xorg/xserver-xorg-input-all/">xserver-xorg-input-all</a></td>
               <td>1:7.7+23</td>
               <td>X.Org X server -- input driver metapackage</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-input-libinput/xserver-xorg-input-libinput/">xserver-xorg-input-libinput</a></td>
               <td>1.2.1-1+b1</td>
               <td>X.Org X server -- libinput input driver</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xf86-input-mtrack/xserver-xorg-input-mtrack/">xserver-xorg-input-mtrack</a></td>
               <td>0.3.1-1+b4</td>
               <td>Multitouch X input driver</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-input-mutouch/xserver-xorg-input-mutouch/">xserver-xorg-input-mutouch</a></td>
               <td>1:1.3.0-3</td>
               <td>X.Org X server -- muTouch input driver</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-input-synaptics/xserver-xorg-input-synaptics/">xserver-xorg-input-synaptics</a></td>
               <td>1.9.2-1+b1</td>
               <td>Synaptics TouchPad driver for X.Org server</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xf86-input-wacom/xserver-xorg-input-wacom/">xserver-xorg-input-wacom</a></td>
               <td>1.1.0-1</td>
               <td>X.Org X server -- Wacom input driver</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xorg-server/xserver-xorg-legacy/">xserver-xorg-legacy</a></td>
               <td>2:21.1.7-3+deb12u9</td>
               <td>setuid root Xorg server wrapper</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xorg/xserver-xorg-video-all/">xserver-xorg-video-all</a></td>
               <td>1:7.7+23</td>
               <td>X.Org X server -- output driver metapackage</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-amdgpu/xserver-xorg-video-amdgpu/">xserver-xorg-video-amdgpu</a></td>
               <td>23.0.0-1</td>
               <td>X.Org X server -- AMDGPU display driver</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-ati/xserver-xorg-video-ati/">xserver-xorg-video-ati</a></td>
               <td>1:19.1.0-3</td>
               <td>X.Org X server -- AMD/ATI display driver wrapper</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-fbdev/xserver-xorg-video-fbdev/">xserver-xorg-video-fbdev</a></td>
               <td>1:0.5.0-2</td>
               <td>X.Org X server -- fbdev display driver</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-intel/xserver-xorg-video-intel/">xserver-xorg-video-intel</a></td>
               <td>2:2.99.917+git20210115-1</td>
               <td>X.Org X server -- Intel i8xx, i9xx display driver</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-nouveau/xserver-xorg-video-nouveau/">xserver-xorg-video-nouveau</a></td>
               <td>1:1.0.17-2</td>
               <td>X.Org X server -- Nouveau display driver</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-qxl/xserver-xorg-video-qxl/">xserver-xorg-video-qxl</a></td>
               <td>0.1.5+git20200331-3</td>
               <td>X.Org X server -- QXL display driver</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-ati/xserver-xorg-video-radeon/">xserver-xorg-video-radeon</a></td>
               <td>1:19.1.0-3</td>
               <td>X.Org X server -- AMD/ATI Radeon display driver</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-vesa/xserver-xorg-video-vesa/">xserver-xorg-video-vesa</a></td>
               <td>1:2.5.0-1+b1</td>
               <td>X.Org X server -- VESA display driver</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xserver-xorg-video-vmware/xserver-xorg-video-vmware/">xserver-xorg-video-vmware</a></td>
               <td>1:13.3.0-3.1+b1</td>
               <td>X.Org X server -- VMware display driver</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xsettings-kde/xsettings-kde/">xsettings-kde</a></td>
               <td>0.9-2+b2</td>
               <td>XSettings daemon for KDE</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xsettingsd/xsettingsd/">xsettingsd</a></td>
               <td>1.0.2-1</td>
               <td>Provides settings to X11 applications</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xwayland/xwayland/">xwayland</a></td>
               <td>2:22.1.9-1</td>
               <td>X server for running X clients under Wayland</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xz-utils/xz-utils/">xz-utils</a></td>
               <td>5.4.1-1</td>
               <td>XZ-format compression utilities</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/y/yt-dlp/yt-dlp/">yt-dlp</a></td>
               <td>2025.03.31-1~bpo12+1</td>
               <td>downloader of videos from YouTube and other sites</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/y/ytdownloader/ytdownloader/">ytdownloader</a></td>
               <td>3.18.5</td>
               <td></td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/y/ytdownloader-locales/ytdownloader-locales/">ytdownloader-locales</a></td>
               <td>3.18.5</td>
               <td></td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zenity/zenity/">zenity</a></td>
               <td>3.44.0-1</td>
               <td>Display graphical dialog boxes from shell scripts</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/z/zenity/zenity-common/">zenity-common</a></td>
               <td>3.44.0-1</td>
               <td>Display graphical dialog boxes from shell scripts (common files)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zerofree/zerofree/">zerofree</a></td>
               <td>1.1.1-1</td>
               <td>zero free blocks from ext2, ext3 and ext4 file-systems</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zip/zip/">zip</a></td>
               <td>3.0-13</td>
               <td>Archiver for .zip files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zlib/zlib1g/">zlib1g</a></td>
               <td>1:1.2.13.dfsg-1</td>
               <td>compression library - runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zlib/zlib1g-dev/">zlib1g-dev</a></td>
               <td>1:1.2.13.dfsg-1</td>
               <td>compression library - development</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libz/libzstd/zstd/">zstd</a></td>
               <td>1.5.4+dfsg2-5</td>
               <td>fast lossless compression algorithm -- CLI tool</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zsync/zsync/">zsync</a></td>
               <td>0.6.2-5</td>
               <td>client-side implementation of the rsync algorithm</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zulucrypt/zulucrypt-cli/">zulucrypt-cli</a></td>
               <td>6.2.0-1</td>
               <td>tool for encrypting volumes</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zulucrypt/zulucrypt-gui/">zulucrypt-gui</a></td>
               <td>6.2.0-1</td>
               <td>graphical front end for zulucrypt-cli</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zulucrypt/zulumount-cli/">zulumount-cli</a></td>
               <td>6.2.0-1</td>
               <td>tool that manages encrypted volumes</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zulucrypt/zulumount-gui/">zulumount-gui</a></td>
               <td>6.2.0-1</td>
               <td>graphical front end for zulumount-cli</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zulucrypt/zulupolkit/">zulupolkit</a></td>
               <td>6.2.0-1</td>
               <td>tool to execute privileged operations</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
 
         </tbody>
@@ -728,7 +734,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
