--- a/packages/26.html
+++ b/packages/26.html
@@ -202,9 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Page:<span><b> 26</b> of </span><b>50</b>
                     </p>
-                </div>
 
-
+<div class="container shadow">
+<h3>Online Package Viewer</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Package Name..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 <div class="container-fluid">
     <div class="table-responsive tabela-okvir-1 nunito-dark">
@@ -225,350 +231,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/p/poppler/libpoppler-qt5-1/">libpoppler-qt5-1</a></td>
               <td>22.12.0-2+deb12u1</td>
               <td>PDF rendering library (Qt 5 based shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/poppler/libpoppler126/">libpoppler126</a></td>
               <td>22.12.0-2+deb12u1</td>
               <td>PDF rendering library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/popt/libpopt0/">libpopt0</a></td>
               <td>1.19+dfsg-1</td>
               <td>lib for parsing cmdline parameters</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/f/ffmpeg/libpostproc56/">libpostproc56</a></td>
               <td>7:5.1.6-0+deb12u1</td>
               <td>FFmpeg library for post processing - runtime files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/powerdevil/libpowerdevilcore2/">libpowerdevilcore2</a></td>
               <td>4:5.27.5-2</td>
               <td>Global power saver settings ui library.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/powerdevil/libpowerdevilui5/">libpowerdevilui5</a></td>
               <td>4:5.27.5-2</td>
               <td>Global power saver settings ui library.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/procps/libproc2-0/">libproc2-0</a></td>
               <td>2:4.0.2-3</td>
               <td>library for accessing process information from /proc</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libksysguard/libprocesscore9/">libprocesscore9</a></td>
               <td>4:5.27.5-2</td>
               <td>library for system monitoring - processcore shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libksysguard/libprocessui9/">libprocessui9</a></td>
               <td>4:5.27.5-2</td>
               <td>library for system monitoring - processui shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/protobuf-c/libprotobuf-c1/">libprotobuf-c1</a></td>
               <td>1.4.1-1+b1</td>
               <td>Protocol Buffers C shared library (protobuf-c)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/protobuf/libprotobuf-lite32/">libprotobuf-lite32</a></td>
               <td>3.21.12-3</td>
               <td>protocol buffers C++ library (lite version)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libproxy/libproxy-tools/">libproxy-tools</a></td>
               <td>0.4.18-1.2</td>
               <td>automatic proxy configuration management library (tools)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libproxy/libproxy1v5/">libproxy1v5</a></td>
               <td>0.4.18-1.2</td>
               <td>automatic proxy configuration management library (shared)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/oath-toolkit/libpskc0/">libpskc0</a></td>
               <td>2.6.7-3.1+deb12u1</td>
               <td>OATH Toolkit Libpskc library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libpsl/libpsl5/">libpsl5</a></td>
               <td>0.21.2-1</td>
               <td>Library for Public Suffix List (shared libraries)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pulseaudio/libpulse-mainloop-glib0/">libpulse-mainloop-glib0</a></td>
               <td>16.1+dfsg1-2+b1</td>
               <td>PulseAudio client libraries (glib support)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pulseaudio/libpulse0/">libpulse0</a></td>
               <td>16.1+dfsg1-2+b1</td>
               <td>PulseAudio client libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/pulseaudio/libpulsedsp/">libpulsedsp</a></td>
               <td>16.1+dfsg1-2+b1</td>
               <td>PulseAudio OSS pre-load library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libp/libpwquality/libpwquality-common/">libpwquality-common</a></td>
               <td>1.4.5-1</td>
               <td>library for password quality checking and generation (data files)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libp/libpwquality/libpwquality1/">libpwquality1</a></td>
               <td>1.4.5-1+b1</td>
               <td>library for password quality checking and generation</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python3-defaults/libpython3-dev/">libpython3-dev</a></td>
               <td>3.11.2-1+b1</td>
               <td>header files and a static library for Python (default)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/p/python3-defaults/libpython3-stdlib/">libpython3-stdlib</a></td>
               <td>3.11.2-1+b1</td>
               <td>interactive high-level object-oriented language (default python3 version)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqaccessibilityclient/libqaccessibilityclient-qt5-0/">libqaccessibilityclient-qt5-0</a></td>
               <td>0.4.1-1+b1</td>
               <td>helper to make writing accessibility tools easier</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libq/libqalculate/libqalculate-data/">libqalculate-data</a></td>
               <td>4.5.1-1</td>
               <td>Powerful and easy to use desktop calculator - data</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqalculate/libqalculate22/">libqalculate22</a></td>
               <td>4.5.1-1</td>
               <td>Powerful and easy to use desktop calculator - library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qca2/libqca-qt5-2/">libqca-qt5-2</a></td>
               <td>2.3.5-2</td>
               <td>libraries for the Qt Cryptographic Architecture</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qca2/libqca-qt5-2-plugins/">libqca-qt5-2-plugins</a></td>
               <td>2.3.5-2</td>
               <td>QCA plugins for libqca2</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqmi/libqmi-glib5/">libqmi-glib5</a></td>
               <td>1.32.2-1</td>
               <td>Support library to use the Qualcomm MSM Interface (QMI) protocol</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqmi/libqmi-proxy/">libqmi-proxy</a></td>
               <td>1.32.2-1</td>
               <td>Proxy to communicate with QMI ports</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqmi/libqmi-utils/">libqmi-utils</a></td>
               <td>1.32.2-1</td>
               <td>Utilities to use the QMI protocol from the command line</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/k/kdegraphics-mobipocket/libqmobipocket2/">libqmobipocket2</a></td>
               <td>4:22.12.3-1</td>
               <td>library for reading Mobipocket documents</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/q/qrencode/libqrencode4/">libqrencode4</a></td>
               <td>4.1.1-1</td>
               <td>QR Code encoding library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libq/libqrtr-glib/libqrtr-glib0/">libqrtr-glib0</a></td>
               <td>1.2.2-1</td>
               <td>Support library to use the QRTR protocol</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/gcc-12/libquadmath0/">libquadmath0</a></td>
               <td>12.2.0-14+deb12u1</td>
               <td>GCC Quad-Precision Math Library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/librabbitmq/librabbitmq4/">librabbitmq4</a></td>
               <td>0.11.0-1+deb12u1</td>
               <td>AMQP client library written in C</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/raptor2/libraptor2-0/">libraptor2-0</a></td>
               <td>2.0.15-4</td>
               <td>Raptor 2 RDF syntax library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/rust-rav1e/librav1e0/">librav1e0</a></td>
               <td>0.5.1-6</td>
               <td>Fastest and safest AV1 encoder - shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/libraw1394/libraw1394-11/">libraw1394-11</a></td>
               <td>2.1.2-2</td>
               <td>library for direct access to IEEE 1394 bus (aka FireWire)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/libraw/libraw20/">libraw20</a></td>
               <td>0.20.2-2.1</td>
               <td>raw image decoder library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/re2/libre2-9/">libre2-9</a></td>
               <td>20220601+dfsg-1+b1</td>
               <td>efficient, principled regular expression library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/readline/libreadline8/">libreadline8</a></td>
               <td>8.2-1.3</td>
               <td>GNU readline and history libraries, run-time libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libr/libregexp-ipv6-perl/libregexp-ipv6-perl/">libregexp-ipv6-perl</a></td>
               <td>0.03-3</td>
               <td>Regular expression for IPv6 addresses</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/reiserfsprogs/libreiserfscore0/">libreiserfscore0</a></td>
               <td>1:3.6.27-8~bpo12+1</td>
               <td>ReiserFS core library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sidplay-libs/libresid-builder0c2a/">libresid-builder0c2a</a></td>
               <td>2.1.1-15+b1</td>
               <td>SID chip emulation class based on resid</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/librist/librist4/">librist4</a></td>
               <td>0.2.7+dfsg-1</td>
               <td>Reliable Internet Stream Transport -- shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/librsvg/librsvg2-2/">librsvg2-2</a></td>
               <td>2.54.7+dfsg-1~deb12u1</td>
               <td>SAX-based renderer library for SVG files (runtime)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/librsvg/librsvg2-bin/">librsvg2-bin</a></td>
               <td>2.54.7+dfsg-1~deb12u1</td>
               <td>command-line utility to convert SVG files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libr/librsvg/librsvg2-common/">librsvg2-common</a></td>
               <td>2.54.7+dfsg-1~deb12u1</td>
               <td>SAX-based renderer library for SVG files (extra runtime)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/rtmpdump/librtmp1/">librtmp1</a></td>
               <td>2.4+20151223.gitfa8646d.1-2+b2</td>
               <td>toolkit for RTMP streams (shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/r/rubberband/librubberband2/">librubberband2</a></td>
               <td>3.1.2+dfsg0-1</td>
               <td>audio time-stretching and pitch-shifting library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
 
         </tbody>
@@ -763,7 +769,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
