--- a/packages/27.html
+++ b/packages/27.html
@@ -202,9 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Page:<span><b> 27</b> of </span><b>50</b>
                     </p>
-                </div>
 
-
+<div class="container shadow">
+<h3>Online Package Viewer</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Package Name..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 <div class="container-fluid">
     <div class="table-responsive tabela-okvir-1 nunito-dark">
@@ -225,350 +231,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/libs/libsamplerate/libsamplerate0/">libsamplerate0</a></td>
               <td>0.2.2-3</td>
               <td>Audio sample rate conversion library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cyrus-sasl2/libsasl2-2/">libsasl2-2</a></td>
               <td>2.1.28+dfsg-10</td>
               <td>Cyrus SASL - authentication abstraction library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cyrus-sasl2/libsasl2-modules/">libsasl2-modules</a></td>
               <td>2.1.28+dfsg-10</td>
               <td>Cyrus SASL - pluggable authentication modules</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/c/cyrus-sasl2/libsasl2-modules-db/">libsasl2-modules-db</a></td>
               <td>2.1.28+dfsg-10</td>
               <td>Cyrus SASL - pluggable authentication modules (DB)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libk/libkgapi/libsasl2-modules-kdexoauth2/">libsasl2-modules-kdexoauth2</a></td>
               <td>22.12.3-1</td>
               <td>library to integrate with Cyrus SASL</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sbc/libsbc1/">libsbc1</a></td>
               <td>2.0-1</td>
               <td>Sub Band CODEC library - runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/scim/libscim8v5/">libscim8v5</a></td>
               <td>1.4.18+git20211204-0.1</td>
               <td>library for SCIM platform</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sdl-image1.2/libsdl-image1.2/">libsdl-image1.2</a></td>
               <td>1.2.12-13+b2</td>
               <td>Image loading library for Simple DirectMedia Layer 1.2, libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsdl1.2/libsdl1.2debian/">libsdl1.2debian</a></td>
               <td>1.2.15+dfsg2-8</td>
               <td>Simple DirectMedia Layer</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsdl2/libsdl2-2.0-0/">libsdl2-2.0-0</a></td>
               <td>2.26.5+dfsg-1</td>
               <td>Simple DirectMedia Layer</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libseccomp/libseccomp2/">libseccomp2</a></td>
               <td>2.5.4-1+deb12u1</td>
               <td>high level interface to Linux seccomp filter</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsecret/libsecret-1-0/">libsecret-1-0</a></td>
               <td>0.20.5-3</td>
               <td>Secret store</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libs/libsecret/libsecret-common/">libsecret-common</a></td>
               <td>0.20.5-3</td>
               <td>Secret store (common files)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libselinux/libselinux1/">libselinux1</a></td>
               <td>3.4-1+b6</td>
               <td>SELinux runtime shared libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libs/libsemanage/libsemanage-common/">libsemanage-common</a></td>
               <td>3.4-1</td>
               <td>Common files for SELinux policy management libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsemanage/libsemanage2/">libsemanage2</a></td>
               <td>3.4-1+b5</td>
               <td>SELinux policy management library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/lm-sensors/libsensors-config/">libsensors-config</a></td>
               <td>1:3.6.0-7.1</td>
               <td>lm-sensors configuration files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lm-sensors/libsensors5/">libsensors5</a></td>
               <td>1:3.6.0-7.1</td>
               <td>library to read temperature/voltage/fan sensors</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsepol/libsepol2/">libsepol2</a></td>
               <td>3.4-2.1</td>
               <td>SELinux library for manipulating binary security policies</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/serd/libserd-0-0/">libserd-0-0</a></td>
               <td>0.30.16-1</td>
               <td>lightweight RDF syntax library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libw/libwebp/libsharpyuv0/">libsharpyuv0</a></td>
               <td>1.4.0-0.1~bpo12+1</td>
               <td>Library for sharp RGB to YUV conversion</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/shine/libshine3/">libshine3</a></td>
               <td>3.1.1-2</td>
               <td>Fixed-point MP3 encoding library - runtime files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libshout/libshout3/">libshout3</a></td>
               <td>2.4.6-1+b1</td>
               <td>MP3/Ogg Vorbis broadcast streaming library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sidplay-libs/libsidplay2/">libsidplay2</a></td>
               <td>2.1.1-15+b1</td>
               <td>SID (MOS 6581) emulation library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsigc++-2.0/libsigc++-2.0-0v5/">libsigc++-2.0-0v5</a></td>
               <td>2.12.0-1</td>
               <td>type-safe Signal Framework for C++ - runtime</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/signond/libsignon-plugins-common1/">libsignon-plugins-common1</a></td>
               <td>8.61-1</td>
               <td>Single Sign On framework - plugins common shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/signond/libsignon-qt5-1/">libsignon-qt5-1</a></td>
               <td>8.61-1</td>
               <td>Single Sign On framework - qt5 shared libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/slang2/libslang2/">libslang2</a></td>
               <td>2.3.3-3</td>
               <td>S-Lang programming library - runtime version</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsm/libsm6/">libsm6</a></td>
               <td>2:1.2.3-1</td>
               <td>X11 Session Management library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/u/util-linux/libsmartcols1/">libsmartcols1</a></td>
               <td>2.38.1-5+deb12u3</td>
               <td>smart column output alignment library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsmbios/libsmbios-c2/">libsmbios-c2</a></td>
               <td>2.4.3-1</td>
               <td>Provide access to (SM)BIOS information -- dynamic library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/snappy/libsnappy1v5/">libsnappy1v5</a></td>
               <td>1.1.9-3</td>
               <td>fast compression/decompression library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsndfile/libsndfile1/">libsndfile1</a></td>
               <td>1.2.0-1</td>
               <td>Library for reading/writing audio files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sndio/libsndio7.0/">libsndio7.0</a></td>
               <td>1.9.0-0.3+b2</td>
               <td>Small audio and MIDI framework from OpenBSD, runtime libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsodium/libsodium23/">libsodium23</a></td>
               <td>1.0.18-1</td>
               <td>Network communication, cryptography and signaturing library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sombok/libsombok3/">libsombok3</a></td>
               <td>2.4.0-2+b1</td>
               <td>Unicode Text Segmentation library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sonic/libsonic0/">libsonic0</a></td>
               <td>0.2.0-12</td>
               <td>Simple library to speed up or slow down speech</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/sord/libsord-0-0/">libsord-0-0</a></td>
               <td>0.16.14+git221008-1</td>
               <td>library for storing RDF data in memory</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/soundtouch/libsoundtouch1/">libsoundtouch1</a></td>
               <td>2.3.2+ds1-1</td>
               <td>Sound stretching library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsoup3/libsoup-3.0-0/">libsoup-3.0-0</a></td>
               <td>3.2.2-2</td>
               <td>HTTP library implementation in C -- Shared library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/libs/libsoup3/libsoup-3.0-common/">libsoup-3.0-common</a></td>
               <td>3.2.2-2</td>
               <td>HTTP library implementation in C -- Common files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libsoxr/libsoxr0/">libsoxr0</a></td>
               <td>0.1.3-4</td>
               <td>High quality 1D sample-rate conversion library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/spandsp/libspandsp2/">libspandsp2</a></td>
               <td>0.0.6+dfsg-2+b1</td>
               <td>Telephony signal processing library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libspatialaudio/libspatialaudio0/">libspatialaudio0</a></td>
               <td>0.3.0+git20180730+dfsg1-2+b1</td>
               <td>library for ambisonic encoding and decoding (runtime files)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/spdlog/libspdlog1.10/">libspdlog1.10</a></td>
               <td>1:1.10.0+ds-0.4</td>
               <td>Very fast C++ logging library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libs/libspectre/libspectre1/">libspectre1</a></td>
               <td>0.2.12-1</td>
               <td>Library for rendering PostScript documents</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/speech-dispatcher/libspeechd-module0/">libspeechd-module0</a></td>
               <td>0.12.0-3~bpo12+1</td>
               <td>Speech Dispatcher: Shared libraries for modules</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/speech-dispatcher/libspeechd2/">libspeechd2</a></td>
               <td>0.12.0-3~bpo12+1</td>
               <td>Speech Dispatcher: Shared libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/speex/libspeex1/">libspeex1</a></td>
               <td>1.2.1-2</td>
               <td>The Speex codec runtime library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/speexdsp/libspeexdsp1/">libspeexdsp1</a></td>
               <td>1.2.1-1</td>
               <td>DSP library derived from speex</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
 
         </tbody>
@@ -763,7 +769,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
