--- a/packages/32.html
+++ b/packages/32.html
@@ -202,9 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Page:<span><b> 32</b> of </span><b>50</b>
                     </p>
-                </div>
 
-
+<div class="container shadow">
+<h3>Online Package Viewer</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Package Name..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 <div class="container-fluid">
     <div class="table-responsive tabela-okvir-1 nunito-dark">
@@ -225,350 +231,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/x/xvidcore/libxvidcore4/">libxvidcore4</a></td>
               <td>2:1.3.7-1</td>
               <td>Open source MPEG-4 video codec (library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxvmc/libxvmc1/">libxvmc1</a></td>
               <td>2:1.0.12-2</td>
               <td>X11 Video extension library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxxf86dga/libxxf86dga1/">libxxf86dga1</a></td>
               <td>2:1.1.5-1</td>
               <td>X11 Direct Graphics Access extension library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libx/libxxf86vm/libxxf86vm1/">libxxf86vm1</a></td>
               <td>1:1.1.4-1+b2</td>
               <td>X11 XFree86 video mode extension library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/x/xxhash/libxxhash0/">libxxhash0</a></td>
               <td>0.8.1-1</td>
               <td>shared library for xxhash</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/y/yajl/libyajl2/">libyajl2</a></td>
               <td>2.1.0-3+deb12u2</td>
               <td>Yet Another JSON Library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/liby/libyaml/libyaml-0-2/">libyaml-0-2</a></td>
               <td>0.2.5-1</td>
               <td>Fast YAML 1.1 parser and emitter library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/y/yaml-cpp/libyaml-cpp0.7/">libyaml-cpp0.7</a></td>
               <td>0.7.0+dfsg-8+b1</td>
               <td>YAML parser and emitter for C++</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/liby/libyuv/libyuv0/">libyuv0</a></td>
               <td>0.0~git20230123.b2528b0-1</td>
               <td>Library for YUV scaling (shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/z3/libz3-4/">libz3-4</a></td>
               <td>4.8.12-3.1</td>
               <td>theorem prover from Microsoft Research - runtime libraries</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zbar/libzbar0/">libzbar0</a></td>
               <td>0.23.92-7+deb12u1</td>
               <td>QR code / bar code scanner and decoder (library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zimg/libzimg2/">libzimg2</a></td>
               <td>3.0.4+ds1-1</td>
               <td>scaling, colorspace, depth conversion library (shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libz/libzip/libzip4/">libzip4</a></td>
               <td>1.7.3-1+b1</td>
               <td>library for reading, creating, and modifying zip archives (runtime)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zeromq3/libzmq5/">libzmq5</a></td>
               <td>4.3.4-6</td>
               <td>lightweight messaging kernel (shared library)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libz/libzstd/libzstd-dev/">libzstd-dev</a></td>
               <td>1.5.4+dfsg2-5</td>
               <td>fast lossless compression algorithm -- development files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/libz/libzstd/libzstd1/">libzstd1</a></td>
               <td>1.5.4+dfsg2-5</td>
               <td>fast lossless compression algorithm</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/z/zvbi/libzvbi-common/">libzvbi-common</a></td>
               <td>0.2.41-1</td>
               <td>Vertical Blanking Interval decoder (VBI) - common files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zvbi/libzvbi0/">libzvbi0</a></td>
               <td>0.2.41-1</td>
               <td>Vertical Blanking Interval decoder (VBI) - runtime files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zxcvbn-c/libzxcvbn0/">libzxcvbn0</a></td>
               <td>2.5+dfsg-1</td>
               <td>password strength estimation library</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/z/zxing-cpp/libzxing2/">libzxing2</a></td>
               <td>1.4.0-3+b1</td>
               <td>C++ port of ZXing library (library files)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/linux-base/linux-base/">linux-base</a></td>
               <td>4.9</td>
               <td>Linux image base package</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/linux/linux-headers-6.12.22+bpo-amd64/">linux-headers-6.12.22+bpo-amd64</a></td>
               <td>6.12.22-1~bpo12+1</td>
               <td>Header files for Linux 6.12.22+bpo-amd64</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/linux/linux-headers-6.12.22+bpo-common/">linux-headers-6.12.22+bpo-common</a></td>
               <td>6.12.22-1~bpo12+1</td>
               <td>Common header files for Linux 6.12.22+bpo</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/linux-signed-amd64/linux-headers-amd64/">linux-headers-amd64</a></td>
               <td>6.12.22-1~bpo12+1</td>
               <td>Header files for Linux amd64 configuration (meta-package)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/linux-signed-amd64/linux-image-6.12.22+bpo-amd64/">linux-image-6.12.22+bpo-amd64</a></td>
               <td>6.12.22-1~bpo12+1</td>
               <td>Linux 6.12 for 64-bit PCs (signed)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/linux/linux-image-6.12.22+bpo-amd64-unsigned/">linux-image-6.12.22+bpo-amd64-unsigned</a></td>
               <td>6.12.22-1~bpo12+1</td>
               <td>Linux 6.12 for 64-bit PCs</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/linux/linux-kbuild-6.12.22+bpo/">linux-kbuild-6.12.22+bpo</a></td>
               <td>6.12.22-1~bpo12+1</td>
               <td>Kbuild infrastructure for Linux 6.12.22+bpo</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/linux/linux-libc-dev/">linux-libc-dev</a></td>
               <td>6.12.22-1~bpo12+1</td>
               <td>Linux support headers for userspace development</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/linux/linux-source/">linux-source</a></td>
               <td>6.12.21-1</td>
               <td>Linux kernel source (meta-package)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/live-boot/live-boot/">live-boot</a></td>
               <td>1:20230131+deb12u1</td>
               <td>Live System Boot Components</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/live-boot/live-boot-doc/">live-boot-doc</a></td>
               <td>1:20230131+deb12u1</td>
               <td>Live System Boot Components (documentation)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/live-boot/live-boot-initramfs-tools/">live-boot-initramfs-tools</a></td>
               <td>1:20230131+deb12u1</td>
               <td>Live System Boot Components (initramfs-tools backend)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/live-config/live-config/">live-config</a></td>
               <td>11.0.3+nmu1</td>
               <td>Live System Configuration Components</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/live-config/live-config-doc/">live-config-doc</a></td>
               <td>11.0.3+nmu1</td>
               <td>Live System Configuration Components (documentation)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/live-config/live-config-systemd/">live-config-systemd</a></td>
               <td>11.0.3+nmu1</td>
               <td>Live System Configuration Components (systemd backend)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/live-tools/live-tools/">live-tools</a></td>
               <td>1:20190831.1</td>
               <td>Live System Extra Components</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lm-sensors/lm-sensors/">lm-sensors</a></td>
               <td>1:3.6.0-7.1</td>
               <td>utilities to read temperature/voltage/fan sensors</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/g/glibc/locales/">locales</a></td>
               <td>2.36-9+deb12u10</td>
               <td>GNU C Library: National Language (locale) data [support]</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/g/glibc/locales-all/">locales-all</a></td>
               <td>2.36-9+deb12u10</td>
               <td>GNU C Library: Precompiled locale data</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/s/shadow/login/">login</a></td>
               <td>1:4.13+dfsg1-1+deb12u1</td>
               <td>system login tools</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/logrotate/logrotate/">logrotate</a></td>
               <td>3.21.0-1</td>
               <td>Log rotation utility</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/e/e2fsprogs/logsave/">logsave</a></td>
               <td>1.47.2~rc1-2~bpo12+2</td>
               <td>save the output of a command in a log file</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lp-solve/lp-solve/">lp-solve</a></td>
               <td>5.5.2.5-2</td>
               <td>Solve (mixed integer) linear programming problems</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/lsb/lsb-base/">lsb-base</a></td>
               <td>11.6</td>
               <td>transitional package for Linux Standard Base init script functionality</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/lsb-release-minimal/lsb-release/">lsb-release</a></td>
               <td>12.0-1</td>
               <td>Linux Standard Base version reporting utility (minimal implementation)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lsof/lsof/">lsof</a></td>
               <td>4.95.0-1</td>
               <td>utility to list open files</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lua-luv/lua-luv/">lua-luv</a></td>
               <td>1.44.2-0-1</td>
               <td>libuv bindings for Lua</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lvm2/lvm2/">lvm2</a></td>
               <td>2.03.16-2</td>
               <td>Linux Logical Volume Manager</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/l/lxqt-metapackages/lxqt/">lxqt</a></td>
               <td>31</td>
               <td>Metapackage for LXQt</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/l/lxqt-metapackages/lxqt-core/">lxqt-core</a></td>
               <td>31</td>
               <td>Metapackage for the LXQt core</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
 
         </tbody>
@@ -763,7 +769,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
