--- a/packages/41.html
+++ b/packages/41.html
@@ -202,9 +202,15 @@ crossorigin="anonymous"></script>
                     <p class="nunito-dark">
                     Page:<span><b> 41</b> of </span><b>50</b>
                     </p>
-                </div>
 
-
+<div class="container shadow">
+<h3>Online Package Viewer</h3>
+<div class="bg-2 shadow">
+<input type="text" id="searchBox" placeholder="  Package Name..." onkeyup="searchPackages()" class="form-control mb-3 pl-2 text-white shadow">
+</div>
+<ul id="searchResults" class="list-group mb-3"></ul>
+</div>
+</div>
 
 <div class="container-fluid">
     <div class="table-responsive tabela-okvir-1 nunito-dark">
@@ -225,350 +231,350 @@ crossorigin="anonymous"></script>
               <td><a href="pool/main/n/node-wordwrap/node-wordwrap/">node-wordwrap</a></td>
               <td>1.0.0-4</td>
               <td>word wrapping library for NodeJS</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-wrap-ansi/node-wrap-ansi/">node-wrap-ansi</a></td>
               <td>8.0.1+~8.0.1-3</td>
               <td>Wordwrap a string with ANSI escape codes</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-wrappy/node-wrappy/">node-wrappy</a></td>
               <td>1.0.2-3</td>
               <td>Callback wrapping utility</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-file-entry-cache/node-write/">node-write</a></td>
               <td>2.0.0~6.0.0+~3.0.4+~2.0.0+~1.0.0+~2.0.1-5</td>
               <td>convenience wrapper for Node.js fs methods</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-write-file-atomic/node-write-file-atomic/">node-write-file-atomic</a></td>
               <td>4.0.2+~4.0.0-1</td>
               <td>Write files in an atomic fashion w/configurable ownership</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-ws/node-ws/">node-ws</a></td>
               <td>8.11.0+~cs13.7.3-1</td>
               <td>RFC-6455 WebSocket implementation module for Node.js</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-xtend/node-xtend/">node-xtend</a></td>
               <td>4.0.2-3</td>
               <td>Node.js library to easily extend an object</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-y18n/node-y18n/">node-y18n</a></td>
               <td>5.0.8+~5.0.0-3</td>
               <td>bare-bones internationalization library used by yargs</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-yallist/node-yallist/">node-yallist</a></td>
               <td>4.0.0+~4.0.1-1</td>
               <td>Double linked list implementation for Node.js</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-yaml/node-yaml/">node-yaml</a></td>
               <td>2.1.3-2</td>
               <td>Nodejs parser and stringifier for YAML standard</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-yargs/node-yargs/">node-yargs</a></td>
               <td>16.2.0+~16.0.4-7</td>
               <td>command line parser for nodejs</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/node-yargs-parser/node-yargs-parser/">node-yargs-parser</a></td>
               <td>21.1.1+~21.0.0-4</td>
               <td>mighty option parser used by yargs</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/nodejs/nodejs/">nodejs</a></td>
               <td>18.19.0+dfsg-6~deb12u2</td>
               <td>evented I/O for V8 javascript - runtime executable</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/nodejs/nodejs-doc/">nodejs-doc</a></td>
               <td>18.19.0+dfsg-6~deb12u2</td>
               <td>API documentation for Node.js, the javascript platform</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/notification-daemon/notification-daemon/">notification-daemon</a></td>
               <td>3.20.0-4+b1</td>
               <td>daemon for displaying passive pop-up notifications</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/npm/npm/">npm</a></td>
               <td>9.2.0~ds1-1</td>
               <td>package manager for Node.js</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/n/ntfs-3g/ntfs-3g/">ntfs-3g</a></td>
               <td>1:2022.10.3-1+deb12u2</td>
               <td>read/write NTFS driver for FUSE</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/n/nyx/nyx/">nyx</a></td>
               <td>2.1.0-2.2</td>
               <td>terminal status monitor for tor</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/ob-vkbd/ob-vkbd/">ob-vkbd</a></td>
               <td>1.4.3</td>
               <td>Modified Onboard Simple On-screen Keyboard</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/ob-welcome/ob-welcome/">ob-welcome</a></td>
               <td>2025.05.10</td>
               <td>OB Welcome tool</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/ob-welcome-kde/ob-welcome-kde/">ob-welcome-kde</a></td>
               <td>2024.12.12</td>
               <td>Meta package</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/obfs4proxy/obfs4proxy/">obfs4proxy</a></td>
               <td>0.0.14-1+b4</td>
               <td>pluggable transport proxy for Tor, implementing obfs4</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/ocl-icd/ocl-icd-libopencl1/">ocl-icd-libopencl1</a></td>
               <td>2.3.1-1</td>
               <td>Generic OpenCL ICD Loader</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/okular/okular/">okular</a></td>
               <td>4:22.12.3-1</td>
               <td>universal document viewer</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/onboard/onboard/">onboard</a></td>
               <td>1.4.3</td>
               <td>EMPTY PACKAGE</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/onboard/onboard-common/">onboard-common</a></td>
               <td>1.4.1-5</td>
               <td>Simple On-screen Keyboard (common files)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/onionshare/onionshare/">onionshare</a></td>
               <td>2.6-5~deb12u1</td>
               <td>Share a file over Tor Hidden Services anonymously and securely</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/onionshare/onionshare-cli/">onionshare-cli</a></td>
               <td>2.6-5~deb12u1</td>
               <td>Share a file over Tor Hidden Services anonymously and securely - cli</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/open-vm-tools/open-vm-tools/">open-vm-tools</a></td>
               <td>2:12.5.0-1~bpo12+1</td>
               <td>Open VMware Tools for virtual machines hosted on VMware (CLI)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/open-vm-tools/open-vm-tools-desktop/">open-vm-tools-desktop</a></td>
               <td>2:12.5.0-1~bpo12+1</td>
               <td>Open VMware Tools for virtual machines hosted on VMware (GUI)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openbosniana-core/openbosniana-apps-basics/">openbosniana-apps-basics</a></td>
               <td>2024.09.06</td>
               <td>Basic applications for headless</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openbosniana-archive-keyring/openbosniana-archive-keyring/">openbosniana-archive-keyring</a></td>
               <td>2024-03-27</td>
               <td>OpenBosniana GPG Archive Keyring</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openbosniana-control-center/openbosniana-control-center/">openbosniana-control-center</a></td>
               <td>2025.05.08</td>
               <td>OB Control Center</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openbosniana-core/openbosniana-core/">openbosniana-core</a></td>
               <td>2024.12.21</td>
               <td>Core package for OpenBosniana OS</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openbosniana-core/openbosniana-core-lite/">openbosniana-core-lite</a></td>
               <td>2024.09.06</td>
               <td>Lightweight MATE settings for OpenBosniana Core</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openbosniana-core/openbosniana-core-node/">openbosniana-core-node</a></td>
               <td>2024.09.06</td>
               <td>OpenBosniana OS meta</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openbosniana-core/openbosniana-core-python3/">openbosniana-core-python3</a></td>
               <td>2024.09.06</td>
               <td>OpenBosniana OS meta</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openbosniana-core-req/openbosniana-core-req/">openbosniana-core-req</a></td>
               <td>2024.09.06</td>
               <td>Core package for OpenBosniana OS</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openbosniana-interface/openbosniana-desktop-kde/">openbosniana-desktop-kde</a></td>
               <td>08.17.2024</td>
               <td>KDE based OpenBosniana desktop</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openbosniana-interface/openbosniana-displaymanager/">openbosniana-displaymanager</a></td>
               <td>2024.05.25</td>
               <td>OpenBosniana configs for lightdm</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openbosniana-core/openbosniana-drivers/">openbosniana-drivers</a></td>
               <td>2024.09.06</td>
               <td>OpenBosniana drivers metapackage.</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openbosniana-education-kde/openbosniana-education-kde/">openbosniana-education-kde</a></td>
               <td>2024.11.10</td>
               <td>OpenBosniana OS EDU KDE</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openbosniana-interface/openbosniana-firefox-profiles/">openbosniana-firefox-profiles</a></td>
               <td>2024.05.28</td>
               <td>OpenBosniana Firefox profiles</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openbosniana-interface/openbosniana-interface/">openbosniana-interface</a></td>
               <td>2024.05.25</td>
               <td>OpenBosniana interface metapackage</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openbosniana-interface/openbosniana-interface-common/">openbosniana-interface-common</a></td>
               <td>2024.05.25</td>
               <td>OpenBosniana interface metapackage</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openbosniana-interface/openbosniana-interface-home/">openbosniana-interface-home</a></td>
               <td>2024.05.25</td>
               <td>OpenBosniana FULL Interface metapackage</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openbosniana-kernel-bootfiles-6.12.12+bpo-amd64/openbosniana-kernel-bootfiles-6.12.12+bpo-amd64/">openbosniana-kernel-bootfiles-6.12.12+bpo-amd64</a></td>
               <td>6.12.12-1~bpo12+1</td>
               <td>Linux 6.12 for 64-bit PCs (signed)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openbosniana-kernel-bootfiles-6.12.22+bpo-amd64/openbosniana-kernel-bootfiles-6.12.22+bpo-amd64/">openbosniana-kernel-bootfiles-6.12.22+bpo-amd64</a></td>
               <td>6.12.22-1~bpo12+1</td>
               <td>Linux 6.12 for 64-bit PCs (signed)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>amd64</td>
               <td><a href="pool/main/o/openbosniana-kernel-bootfiles-6.12.22+bpo-amd64-unsigned/openbosniana-kernel-bootfiles-6.12.22+bpo-amd64-unsigned/">openbosniana-kernel-bootfiles-6.12.22+bpo-amd64-unsigned</a></td>
               <td>6.12.22-1~bpo12+1</td>
               <td>Linux 6.12 for 64-bit PCs (signed)</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
             <tr>
               <td>all</td>
               <td><a href="pool/main/o/openbosniana-kernel-bootfiles-signed/openbosniana-kernel-bootfiles-signed/">openbosniana-kernel-bootfiles-signed</a></td>
               <td>2025.05.14</td>
               <td>Linux 6.12 for 64-bit PCs</td>
-              <td>2025-05-25 02:11:20</td>
+              <td>2025-05-26 05:29:32</td>
             </tr>
 
         </tbody>
@@ -763,7 +769,25 @@ crossorigin="anonymous"></script>
     </div>
   </div>
 </footer><button id="backToTopDugme" title="">↑</button>
+<script src="packages.js"></script>
+<script>
+function searchPackages() {
+    const input = document.getElementById("searchBox").value.toLowerCase();
+    const resultsBox = document.getElementById("searchResults");
+    resultsBox.innerHTML = ""; // Clear previous results
 
+    if (input.length === 0) return;
+
+    const matches = packages.filter(pkg => pkg.name.toLowerCase().includes(input));
+    
+    matches.slice(0, 20).forEach(pkg => {
+        const li = document.createElement("li");
+        li.className = "list-group-item";
+        li.innerHTML = `<a href="${pkg.url}">${pkg.name}</a>`;
+        resultsBox.appendChild(li);
+    });
+}
+</script>
 <script>
   window.onscroll = function() {
       const backToTopButton = document.getElementById("backToTop");
